php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #49020 phar misinterprets ustar long filename standard
Submitted: 2009-07-22 19:09 UTC Modified: 2009-07-22 20:14 UTC
From: cellog@php.net Assigned: cellog (profile)
Status: Closed Package: PHAR related
PHP Version: 5.3.0 OS:
Private report: No CVE-ID: None
 [2009-07-22 19:09 UTC] cellog@php.net
Description:
------------
the phar implementation of long filenames splits on the 100th character no matter what, but the ustar standard specifies that the split should be on a directory boundary


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-07-22 20:14 UTC] cellog@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC