Fix Bug #49020: phar misinterprets ustar long filename standard

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@284622 c90b9560-bf6c-de11-be94-00142212c4b1